# politicate

./: README.md
backend/: .example.env  README.md  api.py  db.py  llm.py  main.py  pse.py  pyproject.toml
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/: actions.ts  page.tsx
frontend/app/home/: layout.tsx  page.tsx
frontend/app/home/federal/: page.tsx
frontend/app/home/municipal/: page.tsx
frontend/app/home/provincial/: page.tsx
frontend/app/home/test/: page.tsx
frontend/app/login/: actions.ts
frontend/app/signup/: page.tsx
frontend/app/test/: page.tsx
frontend/components/: Navbar.tsx  app-sidebar.tsx  nav-main.tsx  postal-code-form.tsx
frontend/components/auth/: AuthForm.tsx  SignUpForm.tsx
frontend/components/chat/: ChatInterface.tsx
frontend/components/hero/: HeroParticle.tsx  index.tsx
frontend/components/layout/: Navbar.tsx
frontend/components/magicui/: border-beam.tsx  shimmer-button.tsx
frontend/components/news/: NewsCard.tsx  types.ts
frontend/components/profile/: PoliticianCard.tsx
frontend/components/sidebar/: app-sidebar.tsx  nav-user.tsx
frontend/lib/: dummy-news.ts
frontend/utils/supabase/: middleware.ts
